--- a/05-figma Denis Novak/index.html
+++ b/05-figma Denis Novak/index.html
@@ -27,7 +27,9 @@
 		</div>
 	</header>
 	<main class="main">
-		<!-- ------------Denis Novik----------------------- -->
+
+		<!--Denis Novik-->
+
 		<div class="container">
 			<section class="novik ">
 				<h1>Denis Novik</h1>
@@ -36,7 +38,8 @@
 				</div>
 			</section>
 		</div>
-		<!-- ----------------About-me------------------------------ -->
+
+		<!--About-me-->
 
 		<section class="about bg-gray">
 			<div class="container">
@@ -51,7 +54,8 @@
 				</div>
 			</div>
 		</section>
-		<!-- ------------------Skills----------------------------- -->
+
+		<!--Skills-->
 
 		<section class="skills">
 			<div class="container">
@@ -127,7 +131,7 @@
 			</div>
 		</section>
 
-		<!-- --------------Portfolio--------------------- -->
+		<!--Portfolio-->
 
 
 		<section class="portfolio bg-gray">
@@ -137,11 +141,13 @@
 				<ul>
 					<li>
 						<img src="assets/images/Fashion-Store.jpg" alt="">
-						<span>
+
+						<div class="fasion-link">
 							<a href="#">
 								Online fashion store - Homepage
 							</a>
-						</span>
+						</div>
+
 					</li>
 					<li>
 						<img src="assets/images/reebok_web.jpg" alt="">
@@ -156,9 +162,13 @@
 						</a>
 					</li>
 				</ul>
+			</div>
+
 		</section>
 	</main>
-	<!-- --------------Contacts--------------------- -->
+
+	<!--Contact-->
+
 	<footer class="footer">
 
 		<section class="contacts">
