Addeded Productly s2 & footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Vasin homeworks</title>
 </head>
 
 <body>
@@ -33,8 +33,9 @@
 	<li>
 		<a href="CSS Shopping List/index.html">Shopping List</a>
 	</li>
+	<li>
+		<a href="Productly/index.html">Productly</a>
+	</li>
 </ul>
-<li>
-	<a href="Productly/index.html">Productly(header & first section)</a>
-</li>
+
 </html>
