Added Weather Forecast

--- a/CSS Weather Forecast/index.html
+++ b/CSS Weather Forecast/index.html
@@ -6,95 +6,133 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CSS Weather Forecast </title>
+	<link rel="stylesheet" href="assets/css/weather-icons-wind.min.css">
+	<link rel="stylesheet" href="assets/css/weather-icons-wind.css">
+	<link rel="stylesheet" href="assets/css/weather-icons.css">
+	<link rel="stylesheet" href="assets/css/weather-icons.min.css">
+<link rel="stylesheet" href="assets/font/weathericons-regular-webfont.eot">
 	<link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
 
 	<div class="wrapper container">
-		<ul>
-			<li class="lisbon">
-				Lisbon
-				21&deg;С
-				<img src="assets/icon/lisobon.svg" alt="lisobon">
+		<h1 class="wrapper-title">CSS Weather Forecast <i class="wi wi-sunrise"></i>
+		</h1>
+
+		<ul class="weather">
+			<li class="lisbon weather-item">
+				<div class="weather-item__city">Lisbon</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">21&deg;С</span>
+					<i class="wi wi-day-sunny"></i>
+					<div>
 			</li>
-			<li class="paris"><small>Paris</small>
-				11&deg;С
-				<img src="assets/icon/paris.svg" alt="paris">
+
+			<li class="paris weather-item">
+				<div class="weather-item__city">Paris</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">11&deg;С</span>
+					<i class="wi wi-day-sleet"></i>
+					<div>
 			</li>
-			<li class="belgrade">Belgrade
-				15&deg;С
-				<img src="assets/icon/belgrade.svg" alt="belgrade">
+
+			<li class="belgrade weather-item">
+				<div class="weather-item__city">Belgrade</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">15&deg;С</span>
+					<i class="wi wi-day-cloudy"></i>
+					<div>
+
 			</li>
+
+
+			<!-- --------------2------------------ -->
+
+			<li class="venice weather-item">
+				<div class="weather-item__city">Venice</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">21&deg;С</span>
+					<i class="wi wi-day-cloudy-high"></i>
+					<div>
+			</li>
+
+
+			<li class="tel-avive weather-item">
+				<div class="weather-item__city">Tel-Avive</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">32&deg;С</span>
+					<i class="wi wi-hot"></i>
+					<div>
+			</li>
+
+			<li class="cair weather-item">
+				<div class="weather-item__city">Cair</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">21&deg;С</span>
+					<i class="wi wi-day-sunny"></i>
+					<div>
+
+			</li>
+
+			<li class="new-york weather-item">
+				<div class="weather-item__city">New-York</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">17&deg;С</span>
+					<i class="wi wi-day-sleet-storm"></i>
+					<div>
+
+			</li>
+
+
+			<!-- -----------------3--------------------- -->
+
+
+			<li class="new-delhi weather-item">
+				<div class="weather-item__city">New-Delhi</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">17&deg;С</span>
+					<i class="wi 
+					wi-rain-wind"></i>
+					<div>
+			</li>
+
+
+
+			<li class="san-francisco weather-item">
+				<div class="weather-item__city">San-Francisco</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">15&deg;С</span>
+					<i class="wi wi-day-sunny-overcast"></i>
+					<div>
+
+			</li>
+
+			<li class="tokyo weather-item">
+				<div class="weather-item__city">Tokyo</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">8&deg;С </span>
+					<i class="wi wi-night-clear"></i>
+					<div>
+
+			</li>
+
+			<!-- ------------------4---------------------------- -->
+
+			<li class="sydney weather-item">
+				<div class="weather-item__city">Sydney</div>
+				<div class="weather-item__block">
+					<span class="weather__temp">25&deg;С</span>
+					<i class="wi wi-night-partly-cloudy"></i>
+					<div>
+			</li>
+
 		</ul>
+		<div class="wrapper-ps">
+			Have a nice day and don't forget umbrella if you are in New Delhi now!
 
-
-		<ul>
-			<li class="lisbon">
-				Lisbon
-				21&deg;С
-				<img src="assets/icon/lisobon.svg" alt="lisobon">
-			</li>
-			<li class="paris"><small>Paris</small>
-				11&deg;С
-				<img src="assets/icon/paris.svg" alt="paris">
-			</li>
-			<li class="belgrade">Belgrade
-				15&deg;С
-				<img src="assets/icon/belgrade.svg" alt="belgrade">
-			</li>
-		</ul>
-
-		<ul>
-			<li class="lisbon">
-				Lisbon
-				21&deg;С
-				<img src="assets/icon/lisobon.svg" alt="lisobon">
-			</li>
-			<li class="paris"><small>Paris</small>
-				11&deg;С
-				<img src="assets/icon/paris.svg" alt="paris">
-			</li>
-			<li class="belgrade">Belgrade
-				15&deg;С
-				<img src="assets/icon/belgrade.svg" alt="belgrade">
-			</li>
-		</ul>
-
-
-		<ul>
-			<li class="lisbon">
-				Lisbon
-				21&deg;С
-				<img src="assets/icon/lisobon.svg" alt="lisobon">
-			</li>
-			<li class="paris"><small>Paris</small>
-				11&deg;С
-				<img src="assets/icon/paris.svg" alt="paris">
-			</li>
-			<li class="belgrade">Belgrade
-				15&deg;С
-				<img src="assets/icon/belgrade.svg" alt="belgrade">
-			</li>
-		</ul>
-
-		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-
-		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
-
-		<ul>
-			<li></li>
-		</ul>
-
+		</div>
 	</div>
 
 </body>
