--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		<a href="CSS Shopping List/index.html">Shopping List</a>
 	</li>
 	<li>
+		<a href="CSS Weather Forecast/index.html">Weather Forecast</a>
+	</li>
+	<li>
 		<a href="Productly/index.html">Productly</a>
 	</li>
 </ul>
