--- a/CSS Shopping List/index.html
+++ b/CSS Shopping List/index.html
@@ -41,23 +41,28 @@
 
 				<div class="wrap">
 					<input id="oranges" type="checkbox" name="shopping List[]" value="20 oranges">
-					<label for="oranges"><span>20 oranges</span> <small>because they are awesome</small>
+					<label for="oranges">
+						<span>20 oranges</span> <small>because they are awesome</small>
 					</label>
 				</div>
 
 				<div class="wrap">
 					<input id="plates" type="checkbox" name="shopping List[]" value="13 plates">
-					<label for="plates"><span>13 plates</span> <small>hm... they always dissapear</small></label>
+					<label for="plates">
+						<span>13 plates</span> <small>hm... they always dissapear</small>
+					</label>
 				</div>
 				<div class="wrap">
 					<input id="bentos" type="checkbox" name="shopping List[]" value="15 bentos">
-					<label for="bentos"><span>15 bentos</span>
+					<label for="bentos">
+						<span>15 bentos</span>
 					</label>
 				</div>
 
 				<div class="wrap">
 					<input id="bottle" type="checkbox" name="shopping List[]" value="1 bottle of Sake ">
-					<label for="bottle"><span>1 bottle of Sake</span> <small>for my friends</small>
+					<label for="bottle">
+						<span>1 bottle of Sake</span> <small>for my friends</small>
 					</label>
 				</div>
 
