--- a/Productly/index.html
+++ b/Productly/index.html
@@ -13,175 +13,176 @@
 </head>
 
 <body>
-
-	<header class="header">
-
-		<div class="container flex">
-
-			<div class="header__logo logo">
-				<img class="logo__image" src="assets/images/Logo.png" alt="logo">
-			</div>
-
-			<nav class="header__menu menu">
-				<ul class="menu__list">
-					<li class="menu__item">
-						<a class="menu__link" href="#">Product</a>
-					</li>
-					<li class="menu__item">
-						<a class="menu__link" href="#">Customers</a>
-					</li>
-					<li class="menu__item">
-						<a class="menu__link" href="#">Pricing</a>
-					</li>
-					<li class="menu__item">
-						<a class="menu__link" href="#">Resources</a>
-					</li>
-				</ul>
-			</nav>
-
-			<div class="header__button button">
-				<button class="btn-white" type="button">Sign In</button>
-				<button class="btn-orang" type="button">Sign Up</button>
-			</div>
-		</div>
-
-	</header>
-
-	<main class="main">
-
-
-		<!-- Ferst-section -->
-
-		<section class="first-section item-section">
+	
+	<div class="page-wrapper">
+		<header class="header">
 
 			<div class="container flex">
 
-				<div class="item-section__content">
-					<h1 class="item-section__title">The Design Thinking superpowers</h1>
+				<div class="header__logo logo">
+					<img class="logo__image" src="assets/images/Logo.png" alt="logo">
+				</div>
 
-					<div class="item-section__text">
-						Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine
-						your
-						next user experience.
+				<nav class="header__menu menu">
+					<ul class="menu__list">
+						<li class="menu__item">
+							<a class="menu__link" href="#">Product</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link" href="#">Customers</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link" href="#">Pricing</a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link" href="#">Resources</a>
+						</li>
+					</ul>
+				</nav>
+
+				<div class="header__button button">
+					<button class="btn-white" type="button">Sign In</button>
+					<button class="btn-orang" type="button">Sign Up</button>
+				</div>
+			</div>
+
+		</header>
+
+		<main class="main">
+
+
+			<!-- Ferst-section -->
+
+			<section class="first-section item-section">
+
+				<div class="container flex">
+
+					<div class="item-section__content">
+						<h1 class="item-section__title">The Design Thinking superpowers</h1>
+
+						<div class="item-section__text">
+							Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine
+							your
+							next user experience.
+						</div>
+						<div class="item-section__button">
+							<button class="btn-orang" type="button">Get started</button>
+						</div>
 					</div>
-					<div class="item-section__button">
-						<button class="btn-orang" type="button">Get started</button>
+					<div class="item-section__image">
+						<img src="assets/images/Image1.png" alt="image">
 					</div>
 				</div>
-				<div class="item-section__image">
-					<img src="assets/images/Image1.png" alt="image">
-				</div>
-			</div>
-		</section>
+			</section>
 
-		<!-- Skills  -->
+			<!-- Skills  -->
 
-		<section class="skills item-skills">
-			<div class="container">
+			<section class="skills item-skills">
+				<div class="container">
 
-				<h2 class="item-skills__title">We design tools to unveil your superpowers
-				</h2>
+					<h2 class="item-skills__title">We design tools to unveil your superpowers
+					</h2>
 
-				<ul class="item-skills__list list flex">
+					<ul class="item-skills__list list flex">
 
-					<li class="list-item">
-						<img src="assets/icon/icon1.png" alt="" class="list-item__icon">
-						<h3 class="list-item__title">First click tests</h3>
-						<div class="list-item__text">While most people enjoy casino gambling,</div>
-					</li>
-
-					<li class="list-item">
-						<img src="assets/icon/icon2.png" alt="" class="list-item__icon">
-						<h3 class="list-item__title">Design surveys</h3>
-						<div class="list-item__text">Sports betting, lottery and bingo playing for the fun</div>
-					</li>
-
-					<li class="list-item">
-						<img src="assets/icon/icon3.png" alt="" class="list-item__icon">
-						<h3 class="list-item__title">Preference tests</h3>
-						<div class="list-item__text">The Myspace page defines the individual.</div>
-					</li>
-
-					<li class="list-item">
-						<img src="assets/icon/icon4.png" alt="" class="list-item__icon">
-						<h3 class="list-item__title">Five second tests</h3>
-						<div class="list-item__text">Personal choices and the overall personality of the person.</div>
-					</li>
-				</ul>
-
-				<div class="skills__button">
-					<button class="btn-orang" type="button">Sign up Now</button>
-				</div>
-			</div>
-		</section>
-
-	</main>
-
-	<!-- Footer  -->
-
-	<footer class="footer">
-		<div class="container flex">
-
-			<div class="footer__logo logo">
-				<img class="logo__image" src="assets/images/Logo.png" alt="logo">
-			</div>
-
-			<div class="quick-links">
-				<div class="footer-title">Quick Links</div>
-				<nav class="footer__menu">
-
-					<ul class="footer-list">
-						<li>
-							<a href="#" class="menu__link">About Us</a>
+						<li class="list-item">
+							<img src="assets/icon/icon1.png" alt="" class="list-item__icon">
+							<h3 class="list-item__title">First click tests</h3>
+							<div class="list-item__text">While most people enjoy casino gambling,</div>
 						</li>
-						<li>
-							<a href="#" class="menu__link">Blog</a>
+
+						<li class="list-item">
+							<img src="assets/icon/icon2.png" alt="" class="list-item__icon">
+							<h3 class="list-item__title">Design surveys</h3>
+							<div class="list-item__text">Sports betting, lottery and bingo playing for the fun</div>
 						</li>
-						<li>
-							<a href="#" class="menu__link">Contact</a>
+
+						<li class="list-item">
+							<img src="assets/icon/icon3.png" alt="" class="list-item__icon">
+							<h3 class="list-item__title">Preference tests</h3>
+							<div class="list-item__text">The Myspace page defines the individual.</div>
 						</li>
-						<li>
-							<a href="#" class="menu__link">FAQ</a>
+
+						<li class="list-item">
+							<img src="assets/icon/icon4.png" alt="" class="list-item__icon">
+							<h3 class="list-item__title">Five second tests</h3>
+							<div class="list-item__text">Personal choices and the overall personality of the person.</div>
 						</li>
 					</ul>
 
-				</nav>
-			</div>
-
-			<div class="legal-stuff">
-				<div class="footer-title">Legal Stuff</div>
-
-				<nav class="footer__menu">
-					<ul class="footer-list">
-						<li>
-							<a href="#" class="menu__link">Disclaimer</a>
-						</li>
-						<li>
-							<a href="#" class="menu__link">Financing</a>
-						</li>
-						<li>
-							<a href="#" class="menu__link">Privacy Policy</a>
-						</li>
-						<li>
-							<a href="#" class="menu__link">Terms of Service</a>
-						</li>
-					</ul>
-
-				</nav>
-			</div>
-
-			<div class="footer__form">
-				<div class="footer-title">Knowing you're always on the best energy deal.</div>
-				<input class="input-tel" type="tel" name="phone" placeholder="Enter your phone Number">
-				<div class="footer__button">
-					<button class="btn-orang" type="button">Sign up Now</button>
+					<div class="skills__button">
+						<button class="btn-orang" type="button">Sign up Now</button>
+					</div>
 				</div>
+			</section>
+
+		</main>
+
+		<!-- Footer  -->
+
+		<footer class="footer">
+			<div class="container flex">
+
+				<div class="footer__logo logo">
+					<img class="logo__image" src="assets/images/Logo.png" alt="logo">
+				</div>
+
+				<div class="quick-links">
+					<div class="footer-title">Quick Links</div>
+					<nav class="footer__menu">
+
+						<ul class="footer-list">
+							<li>
+								<a href="#" class="menu__link">About Us</a>
+							</li>
+							<li>
+								<a href="#" class="menu__link">Blog</a>
+							</li>
+							<li>
+								<a href="#" class="menu__link">Contact</a>
+							</li>
+							<li>
+								<a href="#" class="menu__link">FAQ</a>
+							</li>
+						</ul>
+
+					</nav>
+				</div>
+
+				<div class="legal-stuff">
+					<div class="footer-title">Legal Stuff</div>
+
+					<nav class="footer__menu">
+						<ul class="footer-list">
+							<li>
+								<a href="#" class="menu__link">Disclaimer</a>
+							</li>
+							<li>
+								<a href="#" class="menu__link">Financing</a>
+							</li>
+							<li>
+								<a href="#" class="menu__link">Privacy Policy</a>
+							</li>
+							<li>
+								<a href="#" class="menu__link">Terms of Service</a>
+							</li>
+						</ul>
+
+					</nav>
+				</div>
+
+				<div class="footer__form">
+					<div class="footer-title">Knowing you're always on the best energy deal.</div>
+					<input class="input-tel" type="tel" name="phone" placeholder="Enter your phone Number">
+					<div class="footer__button">
+						<button class="btn-orang" type="button">Sign up Now</button>
+					</div>
+				</div>
+
+
 			</div>
-
-
-		</div>
-	</footer>
-
+		</footer>
+	</div>
 </body>
 
 </html>
