Added  fo the productly footer

--- a/CSS Weather Forecast/index.html
+++ b/CSS Weather Forecast/index.html
@@ -103,7 +103,8 @@
 				</li>
 			</ul>
 		</main>
-		<footer class="wrapper-ps">
+		
+		<footer>
 			<span>Have a nice day and don't forget umbrella if you are in New Delhi now!</span>
 
 		</footer>
