--- a/Productly/index.html
+++ b/Productly/index.html
@@ -5,15 +5,20 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+	<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+
+	<link href="http://fonts.cdnfonts.com/css/poppins" rel="stylesheet">
+	<link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/style.css">
+
 	<title>Productly</title>
 </head>
 
 <body>
-	
+
 	<div class="page-wrapper">
 		<header class="header">
 
@@ -127,7 +132,7 @@
 					<img class="logo__image" src="assets/images/Logo.png" alt="logo">
 				</div>
 
-				<div class="quick-links">
+				<div class="quick-links fb-nav">
 					<div class="footer-title">Quick Links</div>
 					<nav class="footer__menu">
 
@@ -149,7 +154,7 @@
 					</nav>
 				</div>
 
-				<div class="legal-stuff">
+				<div class="legal-stuff fb-nav">
 					<div class="footer-title">Legal Stuff</div>
 
 					<nav class="footer__menu">
@@ -178,7 +183,6 @@
 						<button class="btn-orang" type="button">Sign up Now</button>
 					</div>
 				</div>
-
 
 			</div>
 		</footer>
