--- a/Productly/index.html
+++ b/Productly/index.html
@@ -177,11 +177,13 @@
 				</div>
 
 				<div class="footer__form">
-					<div class="footer-title">Knowing you're always on the best energy deal.</div>
-					<input class="input-tel" type="tel" name="phone" placeholder="Enter your phone Number">
-					<div class="footer__button">
-						<button class="btn-orang" type="button">Sign up Now</button>
-					</div>
+					<form action="#" method="post">
+						<div class="footer-title">Knowing you're always on the best energy deal.</div>
+						<input class="input-tel" type="tel" name="phone" placeholder="Enter your phone Number">
+						<div class="footer__button">
+							<button class="btn-orang" type="submit">Sign up Now</button>
+						</div>
+					</form>
 				</div>
 
 			</div>
