--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 	<li>
 		<a href="Productly/index.html">Productly</a>
 	</li>
+	<li>
+		<a href="CSS-Grid-Layout Photo-gallery/index.html">Photo Gallery</a>
+	</li>
 </ul>
 
 </html>
