--- a/CSS-Grid-Layout Photo-gallery/index.html
+++ b/CSS-Grid-Layout Photo-gallery/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/style.css">
-	<title>Document</title>
+	<title>Photo Gallery</title>
 </head>
 
 <body>
@@ -17,39 +17,35 @@
 		<div class="container">
 			<h2 class="gallery__title">Architectural Photography</h2>
 
-			<div class="gallery-wrapper">
+			<div class="grid">
 
-				<div class="grid">
-
-					<div class="gallery__image item11">
-						<img src="assets/images/1.1.jpg" alt="">
-					</div>
-
-					<div class="gallery__image item12">
-						<img src="assets/images/1.2.jpg" alt="">
-					</div>
-
-					<div class="gallery__image item13">
-						<img src="assets/images/1.3.jpg" alt="">
-					</div>
-
-					<div class="gallery__image item14">
-						<img src="assets/images/1.4.jpg" alt="">
-					</div>
-
-					<div class="gallery__image item15">
-						<img src="assets/images/1.5.jpg" alt="">
-					</div>
-
-					<div class="gallery__image item16">
-						<img src="assets/images/1.6.jpg" alt="">
-					</div>
-
+				<div class="gallery__image item11">
+					<img src="assets/images/1.1.jpg" alt="">
 				</div>
+
+				<div class="gallery__image item12">
+					<img src="assets/images/1.2.jpg" alt="">
+				</div>
+
+				<div class="gallery__image item13">
+					<img src="assets/images/1.3.jpg" alt="">
+				</div>
+
+				<div class="gallery__image item14">
+					<img src="assets/images/1.4.jpg" alt="">
+				</div>
+
+				<div class="gallery__image item15">
+					<img src="assets/images/1.5.jpg" alt="">
+				</div>
+
+				<div class="gallery__image item16">
+					<img src="assets/images/1.6.jpg" alt="">
+				</div>
+
 			</div>
+
 		</div>
-
-
 	</section>
 
 	<section class="still-life gallery">
@@ -87,10 +83,7 @@
 				</div>
 			</div>
 		</div>
-
-
 	</section>
-
 
 	<section class="portrait gallery">
 		<div class="container">
@@ -142,10 +135,7 @@
 				</div>
 			</div>
 		</div>
-
-
 	</section>
-
 
 </body>
 
