--- a/CSS-Grid-Layout Photo-gallery/index.html
+++ b/CSS-Grid-Layout Photo-gallery/index.html
@@ -17,10 +17,22 @@
 		<div class="container">
 			<h2 class="gallery__title">Architectural Photography</h2>
 
+
 			<div class="grid">
 
 				<div class="gallery__image item11">
+
 					<img src="assets/images/1.1.jpg" alt="">
+
+					<!-- <div class="heart">
+						<img src="assets/icon/heart.png" alt="">
+					</div>
+
+					<div class="download">
+						<img src="assets/icon/download.png" alt="">
+					</div> -->
+
+
 				</div>
 
 				<div class="gallery__image item12">
