--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 	<li>
 		<a href="CSS-Grid-Layout Photo-gallery/index.html">Photo Gallery</a>
 	</li>
+	<li>
+		<a href="Denis Novik 2.0/index.html">Denis Novik 2.0</a>
+	</li>
 </ul>
 
 </html>
