Added Web fonts

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 	<li>
 		<a href="Denis Novik 2.0/index.html">Denis Novik 2.0</a>
 	</li>
+	<li>
+		<a href="Web Fonts/index.html">Web fonts</a>
+	</li>
 </ul>
 
 </html>
