--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 	<li>
 		<a href="Web Fonts/index.html">Web fonts</a>
 	</li>
+	<li>
+		<a href="Our team/index.html">Our Team</a>
+	</li>
 </ul>
 
 </html>
