--- a/Web Fonts/index.html
+++ b/Web Fonts/index.html
@@ -20,8 +20,8 @@
 
 				<nav class="header-nav">
 					<ul>
-						<li class="staatliches"><a href="#" target="_blank">Documentation </a> <span class="slash">/</span> </li>
-						<li class="staatliches"> <a href="#" target="_blank">Who's using</a></li>
+						<li><a href="#" target="_blank">Documentation </a> <span class="slash">/</span> </li>
+						<li> <a href="#" target="_blank">Who's using</a></li>
 					</ul>
 				</nav>
 				<div class="header-wrap__logo">
