Added canges for our team

--- a/CSS-Grid-Layout Photo-gallery/index.html
+++ b/CSS-Grid-Layout Photo-gallery/index.html
@@ -24,13 +24,13 @@
 
 					<img src="assets/images/1.1.jpg" alt="">
 
-					<!-- <div class="heart">
+					<div class="heart">
 						<img src="assets/icon/heart.png" alt="">
 					</div>
 
 					<div class="download">
 						<img src="assets/icon/download.png" alt="">
-					</div> -->
+					</div>
 
 
 				</div>
