--- a/Our team/index.html
+++ b/Our team/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="assets/fonts/icon/css/linled-embedded.css">
-
+<!-- <link rel="stylesheet" href="assets/fonts/icon/css/linled-embedded.css"> -->
+	<link rel="stylesheet" href="assets/fonts/icon/style.css">
 	<link rel="stylesheet" href="assets/css/style.min.css">
 	<title>Our Team</title>
 </head>
@@ -45,10 +45,10 @@
 					<div class="main__content-icon">
 
 						<ul class="icon">
-							<li><a href="#"><img src="assets/images/facebook.svg" alt=""></a> </li>
-							<li><a href="#"><img src="assets/images/twitter.svg" alt=""></a> </li>
-							<li><a href="#"><img src="assets/images/googlep.svg" alt=""></a> </li>
-							<li><a href="#"><img src="assets/images/linkedin.svg" alt=""></a> </li>
+							<li class="fb-hover"><a class="icon__media" href="#"><span class="icon-fb"></span></a></li>
+							<li class="tw-hover"><a class="icon__media" href="#"><span class="icon-tw"></span></a> </li>
+							<li class="google-hover"><a class="icon__media" href="#"><span class="icon-google"></span></a> </li>
+							<li class="in-hover"><a class="icon__media" href="#"><span class="icon-in"></span></a> </li>
 						</ul>
 						
 						</div>
@@ -68,7 +68,7 @@
 						</div>
 					</div>
 			
-					<div class="main__content-button link">
+					<div class="main__content-button">
 						<a href="#">view profile</a>
 					</div>
 				
