--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 	<li>
 		<a href="Our team/index.html">Our Team</a>
 	</li>
+	<li>
+		<a href="Documentation/index.html">Documentation</a>
+	</li>
 </ul>
 
 </html>
