Added Who’s using for Documentation

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" href="assets/css/fonts.css">
+	<!-- <link rel="stylesheet" href="assets/css/fonts.css"> -->
 
 	<link rel="stylesheet" href="assets/css/style.min.css">
 	<title>Web Fonts</title>
@@ -21,8 +21,8 @@
 
 					<nav class="header-nav">
 						<ul>
-							<li><a href="#" target="_blank">Documentation </a> <span class="slash">/</span> </li>
-							<li> <a href="#" target="_blank">Who's using</a></li>
+							<li><a href="index.html">Documentation </a> <span class="slash">/</span> </li>
+							<li> <a href="using.html">Who's using</a></li>
 						</ul>
 					</nav>
 					<div class="header-wrap__logo">
