--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 	<li>
 		<a href="Documentation/index.html">Documentation</a>
 	</li>
+	<li>
+		<a href="Form Style/index.html">Form Style</a>
+	</li>
 </ul>
 
 </html>
