--- a/Form Style/index.html
+++ b/Form Style/index.html
@@ -67,7 +67,7 @@
 
 						<div class="form__row border-b">
 							<div class="btn__wrap ">
-								<button class="btn" type="button">Sign Up</button>
+								<button class="btn" type="submit">Sign Up</button>
 							</div>
 
 							<div class="btn__subtitle">
