--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 	<li>
 		<a href="Form Style/index.html">Form Style</a>
 	</li>
+	<li>
+		<a href="SVG/index.html">SVG</a>
+	</li>
 </ul>
 
 </html>
