--- a/Denis Novik 2.0/index.html
+++ b/Denis Novik 2.0/index.html
@@ -10,6 +10,7 @@
 
 	<link rel="stylesheet" href="assets/css/fonts.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/responsiv.css">
 </head>
 
 <body>
