--- a/Productly/index.html
+++ b/Productly/index.html
@@ -85,7 +85,8 @@
 			<section class="skills item-skills">
 				<div class="container">
 
-					<h2 class="item-skills__title">We design tools to unveil your superpowers
+					<h2 class="item-skills__title">
+						We design tools to unveil your superpowers
 					</h2>
 
 					<ul class="item-skills__list list flex">
