Added Sidebar navigation

--- a/Denis Novik 2.0/index.html
+++ b/Denis Novik 2.0/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
 
 	<link rel="stylesheet" href="assets/css/fonts.css">
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/style.min.css">
 	<link rel="stylesheet" href="assets/css/responsiv.css">
 </head>
 
