--- a/Denis Novik 2.0/index.html
+++ b/Denis Novik 2.0/index.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="assets/css/fonts.css">
 	<link rel="stylesheet" href="assets/css/style.min.css">
-	<link rel="stylesheet" href="assets/css/responsiv.css">
+	<link rel="stylesheet" href="assets/css/response.css">
 </head>
 
 <body>
@@ -32,6 +32,7 @@
 			<li> | ENG</li>
 		</ul>
 	</div>
+	<!-- <div id="shadow" onclick="toggleMenu()"></div> -->
 	<header id="header">
 		<div class="container">
 
@@ -260,6 +261,7 @@
 	<script>
 		function toggleMenu(){
 		document.getElementById("mobile-menu").classList.toggle("open")
+		// document.getElementById("shadow").classList.toggle("show")
 		}
 	</script>
 </body>
