--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 	<li>
 		<a href="SVG/index.html">SVG</a>
 	</li>
+
+	<li>
+		<a href="SideBar Navigation/index.html">Sidebar </a>
+	</li>
 </ul>
 
 </html>
