--- a/SideBar Navigation/index.html
+++ b/SideBar Navigation/index.html
@@ -12,7 +12,7 @@
 </head>
 <body >
 
-	<div id="sidebar" >
+	<div id="sidebar" class="open">
 
 		<button type="button" class="btn" onclick="toggleSidebar()">
 		</button>
