--- a/SideBar Navigation/index.html
+++ b/SideBar Navigation/index.html
@@ -40,23 +40,22 @@
 				<span class="dashed2"></span>
 		
 					<ul class="panel-list">
-						<li class="badge-email">
+						<li class="badge email">
 							<a href="#">
-								<span class="icon-Email icon "></span>
-								<span class="subtitle">Email</span>
+								<span class="icon-Email icon"></span>
+								<span class="subtitle ">Email</span>
 							</a>
 						</li>
-						<li class="badge-chats">
+						<li class="badge chat">
 							<a href="#">
 								<span class="icon-Chat icon"></span>
 								<span class="subtitle">Chats</span>
 							</a>
 						</li>
-
-						<li class="badge-calendar">
+						<li class="badge calendar">
 							<a href="#">
 								<span class="icon-header-colendar icon"></span>
-								<span class="subtitle ">Calendar</span>
+								<span class="subtitle">Calendar</span>
 							</a>
 						</li>
 						<li>
@@ -86,13 +85,13 @@
 					</ul>
 			</div>
 
-			
+
 			<div class="auth wrap-section">
 				<div class="title">Auth pages</div>
 				<span class="dashed2"></span>
 					<ul class="panel-list">
 						<li>
-							<a href="#" >
+							<a href="#">
 								<span class="icon-Profile icon"></span> 
 								<span class="subtitle">Profile</span>
 							</a>
