--- a/Manifest/index.html
+++ b/Manifest/index.html
@@ -7,6 +7,8 @@
 	<title>Manifest</title>
 	
 	<link rel="stylesheet" href="assets/fonts/icon/style.css">
+	<!-- <link rel="stylesheet" href="assets/css/hamburgers.min.css"> -->
+
 	<link rel="stylesheet" href="assets/css/style.min.css">
 	<link rel="stylesheet" href="assets/css/response.min.css">
 </head>
@@ -42,12 +44,8 @@
 						</button>
 					</div>
 				</div>
-			
 		</div>
-			
 
-				
-			
 	</header>
 
 
@@ -61,7 +59,6 @@
 			<h1 class="first-title ">
 				Manifest is a newborn theme. Clean, simple and fast.
 			</h1>
-			
 		</div>
 
 	</section>
