--- a/index.html
+++ b/index.html
@@ -60,10 +60,14 @@
 	<li>
 		<a href="SVG/index.html">SVG</a>
 	</li>
-
 	<li>
 		<a href="SideBar Navigation/index.html">Sidebar </a>
 	</li>
+
+	<li>
+		<a href="JS-Типи даних та оператори/">JS-Типи даних та оператори</a>
+	</li>
+
 </ul>
 
 </html>
