--- a/Denis Novik 2.0/index.html
+++ b/Denis Novik 2.0/index.html
@@ -32,7 +32,7 @@
 			<li> | ENG</li>
 		</ul>
 	</div>
-	<!-- <div id="shadow" onclick="toggleMenu()"></div> -->
+	<div id="shadow" onclick="toggleMenu()"></div>
 	<header id="header">
 		<div class="container">
 
@@ -261,7 +261,7 @@
 	<script>
 		function toggleMenu(){
 		document.getElementById("mobile-menu").classList.toggle("open")
-		// document.getElementById("shadow").classList.toggle("show")
+		document.getElementById("shadow").classList.toggle("show")
 		}
 	</script>
 </body>
