--- a/Exam-First website/index.html
+++ b/Exam-First website/index.html
@@ -4,13 +4,39 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Exam #1 | My first website</title>
+	<title>My first website - Project One</title>
+	<meta name="description" content="Bhromaon Safe Travel Anywhere">
+
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+	<link rel="icon" href="assets/images/favicon.ico">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+	<link rel="manifest" href="assets/favicon/site.webmanifest">
+	<link rel="shortcut icon" href="assets/favicon/favicon.ico">
+	<meta name="msapplication-TileColor" content="#00a2ff">
+	<meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
+	<meta name="theme-color" content="#5373fd">
+
+  <meta property="og:url" content="https://mysite.com">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="My first website - Project One">
+  <meta property="og:description" content="Bhromaon Safe Travel Anywhere">
+  <meta property="og:image" content="assets/images/">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <meta name="twitter:title" content="My first website - Project One">
+  <meta name="twitter:description" content="Bhromaon Safe Travel Anywhere">
+  <meta name="twitter:image" content="assets/images/">
+
 	<link rel="stylesheet" href="assets/fonts/icon/style.css">
 	<link rel="stylesheet" href="assets/css/test.scss">
 	<link rel="stylesheet" href="assets/css/style.min.css">
 	<link rel="stylesheet" href="assets/css/response.min.css">
+
 </head>
 <body>
+
 
 <section id="first" class="first-screen">
 	<div class="container">
@@ -18,7 +44,7 @@
 		<div class="wrap-logo">
 			<img src="assets/images/Bhromaon.svg" alt="Logo Bhromaon">
 		</div>
-		<!-- <div class="logo">Bhromaon</div> -->
+
 		<h1 class="title">
 			Safe Travel Anywhere
 		</h1>
@@ -47,16 +73,43 @@
 
 	<!-- Header -->
 
-<header id="header" class="header">
+<div id="shadow" onclick="toggleSidebar()" class=""></div>
+<header id="header" class="header ">
 
-		<div class="container">
+	
 
-			<div class="wrap-logo">
+		<div class="container wrap-menu">
+
+			<div id="sidebar" class="">
+
+				<div class="container sidebar">
+		
+					<nav class="sidebar-menu">
+						<ul class="sidebar-menu__list">
+							<li>
+								<a href="#">Who We Are</a>
+							</li>
+							<li>
+								<a href="#">What We Do</a>
+							</li>
+							<li>
+								<a href="#">Travel With Us</a>
+							</li>
+							<li>
+								<a href="#">Contact Us</a>
+							</li>
+						</ul>
+					</nav>
+					
+				</div>
+		
+			</div>
+			<div class="wrap-logo sm">
 				<img src="assets/images/Bhromaon.svg" alt="Header logo Bhromaon">
+			
+
 			</div>
 
-
-			<!-- <div class="logo">Bhromaon</div> -->
 
 			<nav class="header-menu">
 				<ul class="header-menu__list">
@@ -76,13 +129,22 @@
 			</nav>
 
 		</div>
+
+		<button type="button" class="btn-burger menu" onclick="toggleSidebar()">
+			<img src="assets/images/BurgerMenu.png" alt="Burger Menu">
+		</button>
+
+		<button type="button" class="btn-burger closed" onclick="toggleSidebar()">
+			<img src="assets/images/BurgerClosed.png" alt="Burger Closed">
+		</button>
 </header>
 
 	<main id="main">
 
 		<!-- Aboutus  -->
 
-		<div class="aboutus">
+		<div class="aboutus lazy" data-bg="assets/images/WhyBackground.jpg">
+
 			<div class="container">
 				<div class="wrap-info">
 					<div class="info">
@@ -107,10 +169,11 @@
 
 				<div class="wrap-images">
 					<div class="image">
-						<img src="assets/images/Img-top.jpg" alt="">
+						<img src="#" data-src="assets/images/Img-top.jpg" alt="Scotland Travel Guides" class="lazy">
+
 					</div>
-					<div class="image ase">
-						<img src="assets/images/Img-bottom.jpg" alt="">
+					<div class="image end">
+						<img src="#" data-src="assets/images/Img-bottom.jpg" alt="Mountains Travel Guides" class="lazy">
 					</div>
 				</div>
 			</div>
@@ -118,8 +181,16 @@
 
 
 		<!-- Steps -->
-		<div class="steps">
+
+		<div class="steps ">
 			<div class="container">
+
+				<div class="wrap-dashed">
+					<span class="dashed left"></span>
+					<span class="dashed right"></span>
+				</div>
+
+
 				<ul class="steps__list">
 					<li>
 						<a href="#">
@@ -145,7 +216,7 @@
 
 		<!-- locationTOP -->
 
-		<section class="location top">
+		<section class="location top lazy" data-bg="assets/images/Spain-top.jpg">
 			<div class="container">
 				<div class="grand info">
 					<span class="subtitle">Spain</span>
@@ -166,7 +237,7 @@
 
 		<!-- locationBOTTOM -->
 
-		<section class="location bottom">
+		<section class="location bottom lazy" data-bg="assets/images/Spain-bottom.jpg">
 			<div class="container">
 				<div class="grand info">
 					<span class="subtitle">Spain</span>
@@ -187,14 +258,23 @@
 
 			<!-- Review  -->
 
-		<section class="review">
+		<section class="review lazy" data-bg="assets/images/reviewBG.jpg">
+
+			
 			<div class="container">
 
 				<h2 class="title">What Our  Tourists Say</h2>
 				<div class="review-info">
 
 					<div class="user-image">
-							<img src="assets/images/ReviewFool.jpg" alt="User Foto">
+
+						<picture>
+							<source media="(max-width: 576px)" data-srcset="assets/images/Review576.jpg" srcset="#">
+							<source media="(max-width: 820px)" data-srcset="assets/images/Review768.jpg" srcset="#">
+							<source media="(max-width: 1024px)" data-srcset="assets/images/Review1024.jpg" srcset="#">
+							<source media="(max-width: 1360px)" data-srcset="assets/images/Review1360.jpg" srcset="#">
+							<img src="#" alt="Sam Sumon" class="lazy" data-src="assets/images/Review1360.jpg">
+						</picture>
 					</div>
 
 					<div class="review-info__text">
@@ -212,10 +292,8 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__logo">
-				<img src="assets/images/Bhromaon.svg" alt="Logo Bhromaon">
+				<img src="#" data-src="assets/images/Bhromaon.svg" class="lazy" alt="Logo Bhromaon">
 			</div>
-
-			<!-- <div class="logo">Bhromaon</div> -->
 
 			<h2 class="title">
 				Safe Travel Anywhere
@@ -233,5 +311,19 @@
 	</footer>
 
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/lazyload.min.js"></script>
+	<script>
+		var lazyLoadInstance = new LazyLoad({
+// Your custom settings go here
+});
+
+function toggleSidebar(){
+			document.getElementById("sidebar").classList.toggle("open");
+			document.getElementById("header").classList.toggle("open");
+			document.getElementById("shadow").classList.toggle("show");
+
+		}
+	</script>
+		
 </body>
 </html>
