--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
 	<li>
 		<a href="SideBar Navigation/index.html">Sidebar </a>
 	</li>
-
 	<li>
-		<a href="JS-Типи даних та оператори/">JS-Типи даних та оператори</a>
+		<a href="Exam-First website/index.html">Exam-First website</a>
+	</li>
+	<li>
+		<a href="JS-Типи даних та оператори/index.html">JS-Типи даних та оператори</a>
 	</li>
 
 </ul>
