--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<h1>My homeworks</h1>
-</body>
+
 <ul>
 	<li>
 		<a href="01/index.html">Lesson 1 CV</a>
@@ -64,12 +64,20 @@
 		<a href="SideBar Navigation/index.html">Sidebar </a>
 	</li>
 	<li>
-		<a href="Exam-First website/index.html">Exam-First website</a>
-	</li>
-	<li>
 		<a href="JS-Типи даних та оператори/index.html">JS-Типи даних та оператори</a>
 	</li>
 
 </ul>
 
+
+		<h2>Проєкти</h2>
+<ul>
+	<li>
+		<a href="Exam-First website/index.html">Exam First website</a>
+	</li>
+	<li>
+		<a href="Monticello/index.html">Exam Second website</a>
+	</li>
+</ul>
+</body>
 </html>
