--- a/Monticello/index.html
+++ b/Monticello/index.html
@@ -23,7 +23,7 @@
 
 
 
-	<meta property="og:url" content="https://vasinalex.github.io/HomeworkGit/Exam-First%20website/index.html"><!-- !!!! -->
+	<meta property="og:url" content="https://vasinalex.github.io/HomeworkGit/Monticello/index.html">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Monticello - Project Two">
 	<meta property="og:description" content="A world of beautiful facilities for your time">
