--- a/Exam-First website/index.html
+++ b/Exam-First website/index.html
@@ -50,7 +50,7 @@
 			</h1>
 
 			<div class="wrap-form">
-				<form action="#" method="post">
+				<form action="#" method="get">
 					<input type="text" id="Search" name="q" placeholder="Search Your Travel Destination">
 
 					<div class="wrap-btn btn-search">
@@ -74,6 +74,7 @@
 		<!-- Header -->
 
 	<div id="shadow" onclick="toggleSidebar()" class=""></div>
+	
 	<header id="header" class="header ">
 
 		
@@ -87,16 +88,16 @@
 						<nav class="sidebar-menu" onclick="toggleSidebar()">
 							<ul class="sidebar-menu__list" itemscope itemtype="http://schema.org/SiteNavigationElement">
 								<li>
-									<a itemprop="url" href="#" target="_self">Who We Are</a>
+									<a itemprop="url" href="#" >Who We Are</a>
 								</li>
 								<li>
-									<a itemprop="url" href="#" target="_self">What We Do</a>
+									<a itemprop="url" href="#" >What We Do</a>
 								</li>
 								<li>
-									<a itemprop="url" href="#" target="_self">Travel With Us</a>
+									<a itemprop="url" href="#" >Travel With Us</a>
 								</li>
 								<li>
-									<a itemprop="url" href="#" target="_self">Contact Us</a>
+									<a itemprop="url" href="#" >Contact Us</a>
 								</li>
 							</ul>
 						</nav>
@@ -114,16 +115,16 @@
 				<nav class="header-menu">
 					<ul class="header-menu__list" itemscope itemtype="http://schema.org/SiteNavigationElement">
 						<li>
-							<a itemprop="url" href="#" target="_self">Who We Are</a>
+							<a itemprop="url" href="#" >Who We Are</a>
 						</li>
 						<li>
-							<a itemprop="url" href="#" target="_self">What We Do</a>
+							<a itemprop="url" href="#" >What We Do</a>
 						</li>
 						<li>
-							<a itemprop="url" href="#" target="_self">Travel With Us</a>
+							<a itemprop="url" href="#" >Travel With Us</a>
 						</li>
 						<li>
-							<a itemprop="url" href="#" target="_self">Contact Us</a>
+							<a itemprop="url" href="#" >Contact Us</a>
 						</li>
 					</ul>
 				</nav>
@@ -169,11 +170,11 @@
 
 					<div class="wrap-images">
 						<div class="image">
-							<img src="#" data-src="assets/images/Img-top.jpg" alt="Scotland Travel Guides" class="lazy">
+							<img src="data:image/gif;base64,R0lGODlhAwACAIAAAP///wAAACH5BAEAAAEALAAAAAADAAIAAAICjF8AOw==" data-src="assets/images/Img-top.jpg" alt="Scotland Travel Guides" class="lazy">
 
 						</div>
 						<div class="image end">
-							<img src="#" data-src="assets/images/Img-bottom.jpg" alt="Mountains Travel Guides" class="lazy">
+							<img src="data:image/gif;base64,R0lGODlhAwACAIAAAP///wAAACH5BAEAAAEALAAAAAADAAIAAAICjF8AOw==" data-src="assets/images/Img-bottom.jpg" alt="Mountains Travel Guides" class="lazy">
 						</div>
 					</div>
 				</div>
@@ -273,7 +274,7 @@
 								<source media="(max-width: 820px)" data-srcset="assets/images/Review768.jpg" srcset="#">
 								<source media="(max-width: 1024px)" data-srcset="assets/images/Review1024.jpg" srcset="#">
 								<source media="(max-width: 1360px)" data-srcset="assets/images/Review1360.jpg" srcset="#">
-								<img src="#" alt="Sam Sumon" class="lazy" data-src="assets/images/Review1360.jpg">
+								<img src="data:image/gif;base64,R0lGODlhAwACAIAAAP///wAAACH5BAEAAAEALAAAAAADAAIAAAICjF8AOw==" alt="Sam Sumon" class="lazy" data-src="assets/images/Review1360.jpg">
 							</picture>
 						</div>
 
@@ -292,7 +293,7 @@
 		<footer class="footer">
 			<div class="container">
 				<div class="footer__logo">
-					<img src="#" data-src="assets/images/Bhromaon.svg" class="lazy" alt="Logo Bhromaon">
+					<img src="data:image/gif;base64,R0lGODlhAwACAIAAAP///wAAACH5BAEAAAEALAAAAAADAAIAAAICjF8AOw==" data-src="assets/images/Bhromaon.svg" class="lazy" alt="Logo Bhromaon">
 				</div>
 
 				<h2 class="title">
@@ -300,11 +301,11 @@
 				</h2>
 				<div class="footer__media">
 					<ul>
-						<li><a href="#"><span class="icon-facebook icon"></span></a></li>
-						<li><a href="#"><span class="icon-twitter icon"></span></a></li>
-						<li><a href="#"><span class="icon-linkedin icon"></span></a></li>
-						<li><a href="#"><span class="icon-youtube icon"></span></a></li>
-						<li><a href="#"><span class="icon-pinterest icon"></span></a></li>
+						<li><a href="#" target="_blank" rel="nofollow"><span class="icon-facebook icon"></span></a></li>
+						<li><a href="#" target="_blank" rel="nofollow"><span class="icon-twitter icon"></span></a></li>
+						<li><a href="#" target="_blank" rel="nofollow"><span class="icon-linkedin icon"></span></a></li>
+						<li><a href="#" target="_blank" rel="nofollow"><span class="icon-youtube icon"></span></a></li>
+						<li><a href="#" target="_blank" rel="nofollow"><span class="icon-pinterest icon"></span></a></li>
 					</ul>
 				</div>
 			</div>
@@ -321,7 +322,6 @@
 				document.getElementById("sidebar").classList.toggle("open");
 				document.getElementById("header").classList.toggle("open");
 				document.getElementById("shadow").classList.toggle("show");
-
 			}
 		</script>
 			
