--- a/Monticello/index.html
+++ b/Monticello/index.html
@@ -23,7 +23,7 @@
 
 
 
-	<meta property="og:url" content="https://vasinalex.github.io/HomeworkGit/Monticello/index.html">
+	<meta property="og:url" content="https://vasinalex.github.io/HomeworkGit/Exam-First%20website/index.html"><!-- !!!! -->
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Monticello - Project Two">
 	<meta property="og:description" content="A world of beautiful facilities for your time">
@@ -319,22 +319,22 @@
 		<div class="footer-content">
 			<div class="logo">
 				<a href="#">
-					<img src="assets/images/Logo.svg">
+					<img src="assets/images/Logo.svg" alt="logo">
 				</a>
 			</div>
 			<ul class="footer-social social" itemscope itemtype="http://schema.org/SiteNavigationElement">
 				<li>
-					<a itemprop="url" href="#" >
+					<a itemprop="url" href="#">
 						<span class="icon-fb icon"></span>
 					</a>
 				</li>
 				<li>
-					<a itemprop="url" href="#" >
+					<a itemprop="url" href="#">
 						<span class="icon-tw icon"></span>
 					</a>
 				</li>
 				<li>
-					<a itemprop="url" href="#" >
+					<a itemprop="url" href="#">
 						<span class="icon-instagram icon"></span>
 					</a>
 				</li>
